--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,47 @@
 ﻿body {
-    background-color:cornsilk;
-    text-align:center;
+    background-color: #e4dad9;
+}
+
+.container {
+    margin-left:auto;
+    margin-right: auto;
+    width: 1024px;
+}
+
+header {
+    height: 200px;
+    text-align: center;
+}
+
+nav {
+    background-color: lightgray ;
+    height: 40px;
+}
+
+main {
+    height: 400px;
+    text-align: center;
+    padding-top : 40px;
+}
+
+footer {
+    background-color: lightgray ;
+    height: 100px;
 }
 
 h1 {
-    font-family:'Times New Roman';
-    font-size:28px;
+    font-size: 32px;
+    color: #1b2935;
+    font-family: 'Arial Rounded MT', sans-serif;
+}
+
+p {
+    font-size: 16px;
+    color: #1b2935;
+    font-family :'Arial Rounded MT', sans-serif;
+}
+
+a {
+    color: #1b2935;
+    font-family: 'Arial Rounded MT', sans-serif;
 }
