--- a/Style.css
+++ b/Style.css
@@ -11,22 +11,26 @@
 header {
     height: 200px;
     text-align: center;
+    width:auto ;
 }
 
 nav {
     background-color: lightgray ;
     height: 40px;
+    width :auto ;
 }
 
 main {
     height: 400px;
     text-align: center;
     padding-top : 40px;
+    width :auto ;
 }
 
 footer {
     background-color: lightgray ;
     height: 100px;
+    width :auto ;
 }
 
 h1 {
