--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: #e4dad9;
+    background-color: rgb(228, 218, 217);
     background-image: url(Images/bg3.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -20,7 +20,7 @@ body {
 header {
     margin:0 auto;
     text-align:center ;
-    background-color : #e4dad9;
+    background-color : rgb(228, 218, 217);
     height: 200px;
     width:300px ;
     border-radius: 15px;
@@ -29,22 +29,26 @@ header {
 }
 
 nav {
-    height: 40px;
-    width :auto ;
+    margin: 0 auto;
+    text-align:center;
+    background-color: rgba(228, 218, 217, 0.50);
+    width: fit-content;
+    padding:16px;
+    border-radius:15px;
+    text-decoration:none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
 }
 
 main {
     margin: 0 auto;
     text-align:center ;
     border-radius: 15px;
-    padding: 20px;
-    background-color: #e4dad9;
+    background-color: rgb(228, 218, 217);
     height: auto;
     width: fit-content;
-    padding-top: 40px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 40px;
+    padding: 40px;
 }
 
 footer {
@@ -54,17 +58,25 @@ footer {
 
 h1 {
     font-size: 32px;
-    color: #1b2935;
+    color: rgb(27, 41, 53);
     font-family: 'Arial Rounded MT', sans-serif;
 }
 
 p {
     font-size: 16px;
-    color: #1b2935;
+    color: rgb(27, 41, 53);
     font-family :'Arial Rounded MT', sans-serif;
 }
 
 a {
-    color: #1b2935;
+    color: rgb(27, 41, 53);
     font-family: 'Arial Rounded MT', sans-serif;
+}
+
+nav a {
+    text-decoration: none;
+    font-size: 12px;
+    font-family: 'Arial Rounded MT', sans-serif;
+    padding-left: 10px;
+    padding-right: 10px;
 }
